--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>nEk0</title>
+<link rel="stylesheet" type="text/css" href="/style.css">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<img class="centered" src="/nekoprog.png">
 </body>
 </html>
