--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 <body>
+<iframe width="0" height="0" src="https://www.youtube-nocookie.com/embed/Hy8kmNEo1i8?controls=0" frameborder="0" allow="autoplay; loop; encrypted-media; disablekb;"></iframe>
 <img class="centered" src="/nekoprog.png">
 </body>
 </html>
