--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 <body>
-<iframe width="0" height="0" src="https://www.youtube.com/embed/E4g4pgJWBbM?autoplay=1;loop=1;disablekb=1;encrypted-media=1" frameborder="0"></iframe>
+<iframe class="centered" width="1" height="1" src="https://www.youtube.com/embed/E4g4pgJWBbM?controls=0;autoplay=1;loop=1;disablekb=1;encrypted-media=1" frameborder="0"></iframe>
 <img class="centered" src="/nekoprog.png">
 </body>
 </html>
