--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
 <title>nEk0</title>
 <link rel="stylesheet" type="text/css" href="/style.css">
-<script type="text/javascript">document.cookie="SameSite=None; Secure"</script>
 </head>
 <body>
-<iframe class="centered" width="0" height="0" src="https://www.youtube.com/embed/E4g4pgJWBbM?controls=0;autoplay=1;loop=1;disablekb=1" frameborder="0"></iframe>
+<iframe class="centered" width="0" height="0" src="https://youtube-nocookie.com/embed/E4g4pgJWBbM?controls=0;autoplay=1;loop=1;disablekb=1;encrypted-media=1" frameborder="0"></iframe>
 <img class="centered" src="/nekoprog.png">
 </body>
 </html>
