--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 <body>
-<iframe class="centered" width="0" height="0" src="https://www.youtube-nocookie.com/embed/E4g4pgJWBbM?controls=0" allow="autoplay; loop; disablekb; encrypted-media" frameborder="0"></iframe>
+<iframe class="centered" width="0" height="0" src="https://www.youtube-nocookie.com/embed/E4g4pgJWBbM?controls=0&autoplay=1&loop=1" allow="autoplay; loop; disablekb; encrypted-media" frameborder="0"></iframe>
 <img class="centered" src="/nekoprog.png">
 </body>
 </html>
