--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 <title>nEk0</title>
+<link rel="icon" type="image/png" href="/nekoprog.png" sizes="16x16">
 <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 <body>
-<iframe class="centered" width="0" height="0" src="https://www.youtube-nocookie.com/embed/E4g4pgJWBbM?controls=0&autoplay=1&loop=1&disablekb=1" allow="autoplay; encrypted-media" frameborder="0"></iframe>
+<iframe class="centered" width="0" height="0" src="https://www.youtube-nocookie.com/embed/E4g4pgJWBbM?disablekb=1&controls=0&autoplay=1&loop=1&playlist=E4g4pgJWBbM" allow="autoplay; encrypted-media" frameborder="0"></iframe>
 <img class="centered" src="/nekoprog.png">
 </body>
 </html>
