--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
 <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 <body>
-<!-- Big credit goes to Ujico*/Snail's House for the great song -->
+<!--
+Big credit goes to Ujico*/Snail's House for the great song
+-->
 <iframe class="centered" width="0" height="0" src="https://www.youtube-nocookie.com/embed/SYQOAuarDZA?disablekb=1&controls=0&autoplay=1&loop=1&playlist=SYQOAuarDZA" allow="autoplay; encrypted-media" frameborder="0"></iframe>
 <img class="centered" src="/nekoprog.png">
 </body>
+<!--
+Deployed by GitHub Pages
+Source at https://github.com/nekoprog/nekoprog.github.io
+-->
 </html>
