--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>nEk0</title>
 <link rel="icon" type="image/png" href="/nekoprog.png" sizes="16x16">
 <link rel="stylesheet" type="text/css" href="/style.css">
+<meta name="ocs-site-verification" content="04ba4dc4c8d34559c59699560c6b228a" />
 </head>
 <body>
 <!--
