--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 <body>
 <!--
 Big credit goes to Ujico*/Snail's House for the great song
+https://0101.bandcamp.com/
 -->
-<iframe class="centered" width="0" height="0" src="https://www.youtube-nocookie.com/embed/SYQOAuarDZA?disablekb=1&controls=0&autoplay=1&loop=1&playlist=SYQOAuarDZA" allow="autoplay; encrypted-media" frameborder="0"></iframe>
+<audio autoplay loop>
+<source src="ujico-sunday.ogg" type="audio/ogg">
+<source src="horse.mp3" type="audio/mpeg"></audio> 
 <img class="centered" src="/nekoprog.png">
 </body>
 <!--
